log
ju., 21 de abr. de 2022 12:36:13: 
 tests:  1|8
total_score: 0/70
ae67d48
ju., 21 de abr. de 2022 12:38:01: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|7
total_score: 10/70
519efff
ju., 21 de abr. de 2022 13:01:38: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:29: error: statement with no effect [-Werror=unused-value]
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
treemap.c:52:46: error: expected ';' before 'aux'
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
                                              ^~~
treemap.c:48:12: error: unused variable 'p' [-Werror=unused-variable]
     Pair * p = searchTreeMap(tree, key);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
e91b4a0
ju., 21 de abr. de 2022 13:02:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:29: error: statement with no effect [-Werror=unused-value]
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
treemap.c:52:46: error: expected ';' before 'aux'
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
                                              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d540c88
ju., 21 de abr. de 2022 13:03:42: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:29: error: statement with no effect [-Werror=unused-value]
     else(newNode->pair->key < aux->pair->key)tree->current->left = newNode;
         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
treemap.c:52:46: error: expected ';' before 'tree'
     else(newNode->pair->key < aux->pair->key)tree->current->left = newNode;
                                              ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b4b0b58
ju., 21 de abr. de 2022 13:04:19: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|7
total_score: 10/70
7b9a2f2
ju., 21 de abr. de 2022 13:05:42: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|7
total_score: 10/70
d517214
ju., 21 de abr. de 2022 13:07:16: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|7
total_score: 10/70
6729845
ju., 21 de abr. de 2022 13:11:04: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|7
total_score: 10/70
c35d79c
ju., 21 de abr. de 2022 13:12:39: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  9|7
total_score: 10/70
4f1c5cd
ju., 21 de abr. de 2022 13:13:44: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|6
total_score: 20/70
f3ef118
